--- a/.env
+++ b/.env
@@ -11,6 +11,8 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
+THEME=https://raw.githubusercontent.com/insanum/obsidian_nord/HEAD/theme.css
+BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=true
